# shar-messenger

./: .gitattributes  .gitignore  AUTH_FLOW.md  CLI_GUIDE.md  COMPONENTS_FIXED_REPORT.md  COMPONENT_EXTRACTION_COMPLETE.md  COMPONENT_FIX_EXAMPLE.md  DEPLOY.md  DEVELOPMENT.md  FIXES.md  INTEGRATION_GUIDE.md  MIGRATION_COMPLETE.md  OPTIMIZATION_COMPLETE.md  PERFORMANCE_ISSUES.md  PERFORMANCE_OPTIMIZATIONS.md  POSTGRES_QUICK_START.md  README.md  SUMMARY.md  TEMPLATES_GUIDE.md  apply_template.py  check_and_apply_template.py  check_duplicates.py  check_indexes.sh  check_tasks.py  check_user.sh  cli.ps1  create_template.py  create_yandex_template.py  debug_events.py  deploy-changes.ps1  deploy-now.ps1  deploy-people-fix.ps1  deploy-postgres.ps1  deploy-quick.ps1  deploy-simple.ps1  deploy-users.ps1  deploy.ps1  extract-all-components.py  extract-fast.py  extract-final.py  (+29 more)
.github/: copilot-instructions.md  Инструкция Яндекса по фидам
Tags/: check_exif.py  index.html  requirements.txt  tag_editor_api.py
backend/: .env.example  .gitignore  00_НАЧНИ_ОТСЮДА.md  ACCESS_CONTROL_COMPLETE.md  FILES_LIST.txt  FILES_OVERVIEW.md  INDEX.md  LIVEKIT_SETUP.md  MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md  POSTGRESQL_MIGRATION_COMPLETE.md  POSTGRESQL_SETUP.md  POSTGRES_INSTALL.md  POSTGRES_QUICKSTART.md  PROJECT_COMPLETE.md  README_BACKEND.md  READY.txt  (+98 more)
frontend/native/tauri/src-tauri/: Cargo.toml  tauri.conf.json
frontend/native/tauri/src-tauri/capabilities/: default.json
frontend/native/tauri/src-tauri/icons/: icon.icns
frontend/native/tauri/src-tauri/src/: lib.rs  main.rs
(+731 files in other folders)
