[package]
name = "shar_tauri_client"
version = "0.1.0"
description = "Shar Messenger native shell powered by Tauri"
authors = ["GitHub Copilot"]
edition = "2021"

[lib]
name = "shar_tauri_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
