[package]
name = "shar_tauri_client"
version = "1.0.8"
description = "Shar Messenger native shell powered by Tauri"
authors = ["GitHub Copilot"]
edition = "2021"

[lib]
name = "shar_tauri_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
